--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "graphql": "^15.5.0",
+    "graphql-iso-date": "^3.6.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.0",
     "nodemon": "^2.0.7"
   }
