--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ DB_Password="h0vXSknsRpkFI2xD"
 DB_Name='ITCrezy'
 Port=3001
 SECRET='asdahusvhasiczovsjfsoifejwfi!431$$#%'
+EMAIL_API='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'
