--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.4.2",
     "apollo-server-express": "^2.21.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
